# ghostkey

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  clippy.toml  deny.toml  install.sh  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml  test.yml
benches/: crypto_bench.rs  mod.rs
docs/: advanced-usage.md
examples/: usage.sh
src/: error.rs  main.rs
src/api/: handlers.rs  mod.rs  routes.rs  types.rs
src/cli/: add.rs  clipboard.rs  completion.rs  delete.rs  dev.rs  env.rs  export.rs  get.rs  import.rs  init.rs  list.rs  mod.rs  run.rs  search.rs  ssh.rs  tag.rs
src/config/: mod.rs
src/models/: credential.rs  environment.rs  mod.rs  project.rs  secret.rs
src/tests/: crypto_tests.rs  key_tests.rs  mod.rs  model_tests.rs
src/utils/: clipboard.rs  input.rs  mod.rs
src/vault/: crypto.rs  key.rs  migration.rs  mod.rs  storage.rs
tests/: integration_test.rs  vault_test.rs
web/: package-lock.json  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/projects/[id]/: page.tsx
web/src/app/settings/: page.tsx
web/src/app/vault/unlock/: page.tsx
web/src/lib/: api.ts  types.ts  utils.ts
